# renonotify

./: .gitignore  README.md  config.yaml  feeds.opml  pyproject.toml
.github/workflows/: notify.yml
src/renonotify/: __init__.py  __main__.py  bluesky.py  rss.py  slack.py  summarize.py
