[project]
name = "renonotify"
version = "0.1.0"
description = "Summarize Bluesky + RSS feeds over the last N hours and post to Slack"
requires-python = ">=3.11"
dependencies = [
    "atproto>=0.0.55",
    "feedparser>=6.0",
    "anthropic>=0.40",
    "requests>=2.32",
    "PyYAML>=6.0",
]

[project.scripts]
renonotify = "renonotify.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
